[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/City2_modernWTFCity - Copy.png" type="Texture" id=2]
[ext_resource path="res://Main/Map/Cities/City_3.gd" type="Script" id=3]
[ext_resource path="res://Main/item_for_sale.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Hire_mercs.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="City_3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="City_info" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Label" type="Label" parent="VBoxContainer/City_info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.5
margin_right = 192.5
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "MODERNA! Death by Moderna and Pfizer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/City_info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/City_info/Control"]
position = Vector2( -8, 9 )
scale = Vector2( 0.542972, 0.514127 )
texture = ExtResource( 2 )

[node name="Purchase_desc" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 301.0
margin_right = 1024.0
margin_bottom = 325.0
size_flags_horizontal = 3

[node name="Quantity" type="Label" parent="VBoxContainer/Purchase_desc"]
margin_right = 201.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Your Possesion"
align = 1

[node name="Item_name" type="Label" parent="VBoxContainer/Purchase_desc"]
margin_left = 205.0
margin_right = 407.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Item"
align = 1

[node name="Price" type="Label" parent="VBoxContainer/Purchase_desc"]
margin_left = 411.0
margin_right = 612.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Price"
align = 1

[node name="Label4" type="Label" parent="VBoxContainer/Purchase_desc"]
margin_left = 616.0
margin_right = 818.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="Label5" type="Label" parent="VBoxContainer/Purchase_desc"]
margin_left = 822.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="Items" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 329.0
margin_right = 1024.0
margin_bottom = 702.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Items_for_sale" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 0.0

[node name="Items_for_sale2" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 50.0

[node name="Items_for_sale3" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 100.0

[node name="Items_for_sale4" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 150.0

[node name="Items_for_sale5" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 1024.0
margin_bottom = 200.0

[node name="Items_for_sale6" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 250.0
margin_right = 1024.0
margin_bottom = 250.0

[node name="Items_for_sale7" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 300.0

[node name="Items_for_sale8" parent="VBoxContainer/Items" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 350.0
margin_right = 1024.0
margin_bottom = 350.0

[node name="Buttom_menu" type="GridContainer" parent="VBoxContainer"]
margin_top = 706.0
margin_right = 1024.0
margin_bottom = 736.0
size_flags_horizontal = 3
custom_constants/hseparation = 10
columns = 3

[node name="Map" type="Button" parent="VBoxContainer/Buttom_menu"]
margin_right = 334.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Map"

[node name="Hire" type="Button" parent="VBoxContainer/Buttom_menu"]
margin_left = 344.0
margin_right = 678.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Hire"

[node name="Settings" type="Button" parent="VBoxContainer/Buttom_menu"]
margin_left = 688.0
margin_right = 1022.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Error: %(#*2*#&$*#$^!~"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -304.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 8.0
margin_right = 244.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "You have this amount left: "

[node name="Money_left" type="Label" parent="HBoxContainer"]
margin_left = 248.0
margin_top = 8.0
margin_right = 304.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
clip_text = true

[node name="hire_mercs_popup" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -248.0
margin_right = 280.0
margin_bottom = 248.0
color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="hire_mercs_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mercs" parent="hire_mercs_popup/VBoxContainer" instance=ExtResource( 5 )]
margin_bottom = 121.0
size_flags_vertical = 3
merc_name = "Army of Weebs"
cost = 669
fighting_power = 1337

[node name="Mercs2" parent="hire_mercs_popup/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 125.0
margin_bottom = 246.0
size_flags_vertical = 3
merc_name = "Naruto Runners"
cost = 1337
fighting_power = 1337

[node name="Mercs3" parent="hire_mercs_popup/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 250.0
margin_bottom = 371.0
size_flags_vertical = 3
merc_name = "Covid Infected Dude"
cost = 666

[node name="Mercs4" parent="hire_mercs_popup/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 375.0
margin_bottom = 496.0
size_flags_vertical = 3
merc_name = "Ur Mother"
cost = 9000
fighting_power = 9000

[node name="Close_hire_mercs" type="Button" parent="hire_mercs_popup"]
anchor_right = 1.0
margin_bottom = 20.0
text = "CLOSE WINDOW"

[node name="Close_hire_mercs2" type="Button" parent="hire_mercs_popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -20.0
margin_right = 280.0
text = "CLOSE WINDOW"
[connection signal="pressed" from="VBoxContainer/Buttom_menu/Map" to="." method="_on_Map_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttom_menu/Hire" to="." method="_on_Hire_pressed"]
[connection signal="pressed" from="hire_mercs_popup/Close_hire_mercs" to="." method="_on_Close_hire_mercs_pressed"]
[connection signal="pressed" from="hire_mercs_popup/Close_hire_mercs2" to="." method="_on_Close_hire_mercs_pressed"]
